experimentData/Jadx-detailedExperimentData/errorSamples/recompilation_failures/506/log-1-506.log

Test.java:57: error: unreachable statement
            int i6 = i3;
                ^
Test.java:155: error: unreachable statement
            i2--;
            ^
Test.java:161: error: variable jArr might not have been initialized
        FuzzerUtils.out.println("i20 d4 lArr = " + i6 + "," + Double.doubleToLongBits(-3.93295d) + "," + FuzzerUtils.checkSum(jArr));
                                                                                                                              ^
Note: FuzzerUtils.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
3 errors

Note: FuzzerUtils.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.

